[Gtk] accessibility/canvas-description-and-role expected results needed https://bugs.webkit.org/show_bug.cgi?id=95644

Patch by Joanmarie Diggs <jdiggs@igalia.com> on 2012-09-06
Reviewed by Martin Robinson.

Source/WebCore:

The new accessibility CanvasRole should be mapped to ATK_ROLE_CANVAS
rather than ATK_ROLE_IMAGE.

No new test because the CanvasRole came with a new layout test lacking
expected results for Gtk. The generated expected results for that test
reflect the revised mapping to ATK_ROLE_CANVAS.

* accessibility/gtk/WebKitAccessibleWrapperAtk.cpp:
(atkRole):

LayoutTests:

Generated expected results for Gtk. These results reflect the revised
mapping of CanvasRole to ATK_ROLE_CANVAS rather than ATK_ROLE_IMAGE.

* platform/gtk/accessibility/canvas-description-and-role-expected.txt: Added.

Canonical link: https://commits.webkit.org/113926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127825 268f45cc-cd09-0410-ab3c-d52691b4dbfc