Source/WebCore/accessibility/gtk/WebKitAccessibleWrapperAtk.cpp
@@ -501,7 +501,6 @@ static AtkRole atkRole(AccessibilityRole role)
     case WebCoreLinkRole:
     case ImageMapLinkRole:
         return ATK_ROLE_LINK;
-    case CanvasRole:
     case ImageMapRole:
     case ImageRole:
         return ATK_ROLE_IMAGE;
@@ -525,6 +524,8 @@ static AtkRole atkRole(AccessibilityRole role)
         return ATK_ROLE_SECTION;
     case FormRole:
         return ATK_ROLE_FORM;
+    case CanvasRole:
+        return ATK_ROLE_CANVAS;
     default:
         return ATK_ROLE_UNKNOWN;
     }
